# ajou_mlops_hw02

./: .gitignore  README.md  ajou_mlops_hw02.code-workspace  pyproject.toml
src/: check_venv.py  hw02_main.ipynb  main.py
