[project]
name = "ajou-mlops-hw02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asttokens>=3.0.1",
    "dvc>=3.67.0",
    "dvc-gdrive>=3.0.1",
    "executing>=2.2.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pure-eval>=0.2.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "stack-data>=0.6.3",
]
